# secure-code-reasoner

./: .dockerignore  .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  AUTOMATION_COMPLETE.md  AUTOMATION_SETUP.md  BRANCH_PROTECTION_ACTIVE.md  BRANCH_PROTECTION_AUDIT.md  BRANCH_PROTECTION_CHECKLIST.md  BRANCH_PROTECTION_SYNCED.md  BRANCH_PROTECTION_SYNC_REPORT.md  CHANGELOG.md  CI_FAILURE_PLAYBOOK.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEEP_VERIFICATION_AUDIT_REPORT.md  Dockerfile  FINAL_EXECUTION_SUMMARY.md  FINAL_PUSH_EXECUTION.md  FIX_APPLIED_VALIDATION_REPORT.md  FIX_MISSING_CHANGES_COMMANDS.sh  GITHUB_MISSING_ITEMS_DETECTION.md  GITHUB_STATE_VERIFICATION_REPORT.md  GITHUB_WORKFLOW_DIAGNOSTIC_REPORT.md  GITHUB_WORKFLOW_REPAIR_COMPLETE.md  GITHUB_WORKFLOW_REPAIR_VALIDATION_REPORT.md  LICENSE  MAINTAINERS.md  MASTER_RELEASE_PROMPT.md  MASTER_VALIDATION_REPORT.md  MERGE_PR4_FINAL_INSTRUCTIONS.md  MERGE_PR4_INSTRUCTIONS.md  POST_MERGE_VALIDATION.sh  PRE_PUSH_STATUS.md  PUSH_COMMANDS.md  PUSH_COMPLETE.md  PUSH_E2E_REPORT.sh  PUSH_LEVEL4.sh  README.md  RELEASE_CHECKLIST.md  (+20 more)
.github/: BRANCH_PROTECTION.json  BRANCH_PROTECTION_SETUP.md  BRANCH_PROTECTION_SYNC_SCRIPT.sh  branch-protection-payload.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  nightly.yml  publish-pypi.yml  pypi-publish.yml  semantic-release.yml
docs/: ADVERSARIAL_RELEASE_VERIFICATION.md  ADVERSARIAL_VV_REPORT.json  ADVERSARIAL_VV_REPORT.md  AIR_GAP_NON_HALLUCINATION_CONTRACT.json  AUDIT_V5.md  BRANCH_PROTECTION_CONFIGURATION.md  BUG_CLOSURE_PIPELINE_SUMMARY.md  CONSTITUTIONAL_INVARIANTS.md  CORRECTNESS_CLOSURE_VERIFICATION.md  CORRECTNESS_SYNC_REGRESSION_DEEP.md  CORRECTNESS_SYNC_REGRESSION_REPORT.md  E2E_VERIFICATION_REPORT.md  END_TO_END_VERIFICATION_REPORT.json  EPISTEMIC_ANALYSIS_META_VERIFICATION.md  EPISTEMIC_EXHAUSTION_VERIFICATION.md  EPISTEMIC_EXHAUSTION_VERIFICATION_FINAL.md  EPISTEMIC_EXHAUSTION_VERIFICATION_FORMAL.md  EPISTEMIC_EXHAUSTION_VERIFICATION_INDEPENDENT.md  EXCEPTION_BOUNDARY_INTEGRITY.json  EXCEPTION_SEMANTICS_LOCKDOWN.json  FAILURE_ORIENTED_VV_REPORT.json  FAILURE_ORIENTED_VV_REPORT.md  FAIL_FIRST_TEST_ENFORCEMENT.json  FINAL_ADVERSARIAL_VV_REPORT.json  FINAL_ADVERSARIAL_VV_REPORT.md  FINAL_RELEASE_INTEGRITY_AUDIT.md  FINAL_RELEASE_INTEGRITY_AUDIT_COMPLETE.json  FINAL_RELEASE_INTEGRITY_AUDIT_COMPLETE.md  FINAL_STATE_DEFINITION.md  FORMAL_BUG_FINDING_ANALYSIS.json  FORMAL_PROPERTIES.md  FORMAL_VERIFICATION_READINESS.md  GITHUB_STATE_SYNC_CHECKLIST.md  GROUND_TRUTH_SYNC_REPORT.md  HOSTILE_CONTINUOUS_VERIFICATION.md  HOSTILE_REVALIDATION_PROMPT.md  ITERATIVE_BUG_ERADICATION_REPORT.md  ITERATIVE_BUG_ERADICATION_REPORT_DEEP.md  LEVEL10_E2E_EXECUTION_VERIFICATION.md  LEVEL3_EPISTEMIC_SAFETY_REPORT.json  (+39 more)
examples/demo-repo/: README.md  app.py  requirements.txt  utils.py
scripts/: verify.sh  verify_github_sync.sh
src/secure_code_reasoner/: __init__.py  contracts.py  exceptions.py
src/secure_code_reasoner/agents/: __init__.py  agent.py  code_analyst.py  coordinator.py  models.py  patch_advisor.py  security_reviewer.py
src/secure_code_reasoner/cli/: __init__.py  main.py
src/secure_code_reasoner/fingerprinting/: __init__.py  fingerprinter.py  models.py
src/secure_code_reasoner/reporting/: __init__.py  formatter.py  models.py  reporter.py
src/secure_code_reasoner/tracing/: __init__.py  models.py  trace_wrapper.py  tracer.py
tests/: __init__.py  test_agents.py  test_agents_implementation.py  test_agents_models.py  test_contracts.py  test_fingerprinting.py  test_fingerprinting_error_propagation.py  test_fingerprinting_implementation.py  test_fingerprinting_models.py  test_property_tests.py  test_reporting.py  test_reporting_implementation.py  test_reporting_models.py  test_tracing.py  test_tracing_implementation.py  test_tracing_models.py  test_verify_script.py
