[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-code-reasoner"
version = "0.1.0"
description = "A research-oriented toolkit for analyzing, fingerprinting, and reviewing code repositories via semantic and execution-based analysis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "codethor0"}
]
keywords = ["security", "code-analysis", "static-analysis", "fingerprinting", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click==8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "black==23.12.1",
    "mypy==1.7.1",
    "ruff==0.1.9",
    "semantic-release>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/codethor0/secure-code-reasoner"
Documentation = "https://github.com/codethor0/secure-code-reasoner#readme"
Repository = "https://github.com/codethor0/secure-code-reasoner"
Issues = "https://github.com/codethor0/secure-code-reasoner/issues"

[project.scripts]
scr = "secure_code_reasoner.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=secure_code_reasoner --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.semantic_release]
version_variable = "pyproject.toml:project.version"
build_command = "pip install build && python -m build"
dist_path = "dist"
upload_to_vcs_release = true
hvcs = "github"
commit_author = "codethor0 <codethor0@users.noreply.github.com>"
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.changelog]
enabled = true
changelog_file = "CHANGELOG.md"

[tool.semantic_release.changelog.environment]
blocked_labels = ["skip-changelog"]

[tool.semantic_release.changelog.environment.opt_in_labels]
opt_in_labels = ["changelog"]

[tool.semantic_release.changelog.environment.opt_out_labels]
opt_out_labels = ["skip-changelog"]

[tool.semantic_release.changelog.excluded]
excluded = ["build", "chore", "ci", "docs", "refactor", "style", "test"]

[tool.semantic_release.changelog.sections]
sections = [
    {type = "feat", section = "Features"},
    {type = "fix", section = "Bug Fixes"},
    {type = "perf", section = "Performance Improvements"},
    {type = "revert", section = "Reverts"},
    {type = "docs", section = "Documentation"},
    {type = "style", section = "Code Style"},
    {type = "chore", section = "Chores"},
    {type = "refactor", section = "Code Refactoring"},
    {type = "test", section = "Tests"},
    {type = "build", section = "Build System"},
    {type = "ci", section = "Continuous Integration"},
]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.pre]
match = "(pre|alpha|beta|rc)[./-]?\\d*"
prerelease_token = "rc"
prerelease = true
